

HEAD
====
Fixed:
- bitmap: set/clear/test had no effect due to wrong type selection
- bitmap: avoid left-shift larger than type on 64-bit


libHX 3.5 (August 01 2010)
==========================
Fixed:
- format2: failure to skip escaped char in "%(echo foo\ bar)" was corrected
- proc: properly check for HXPROC_STDx--HXPROC_STDx_NULL overlap
- strquote: do not cause allocation with invalid format numbers
Enhancements:
- format2: add the %(exec) function
- format2: add the %(shell) function
- format2: security feature for %(exec) and %(shell)
- format2: add the %(snl) function
- string: HX_strquote gained HXQUOTE_LDAPFLT (LDAP search filter) support
- string: HX_strquote gained HXQUOTE_LDAPRDN (LDAP relative DN) support
Changes:
- format1: removed older formatter in favor of format2
- format2: add check for empty key
- format2: function-specific delimiters
- format2: do nest-counting even with normal parentheses
- format2: check for zero-argument function calls
- hashmap: do not needlessy change TID when no reshape was done
- string: HX_basename (the fast variant) now recognizes the root directory
- string: HX_basename now returns the trailing component with slashes
  instead of everything after the last slash (which may have been nothing)


libHX 3.4 (April 03 2010)
=========================
Changes:
- add explicit initialize/deinitialize functions HX_init, HX_exit
Enhancements:
- add the HX_memmem function
- add the HXlist_empty function
- documentation updates: HXlist traversal


libHX 3.3 (January 20 2010)
===========================
Bug fixes:
- format: fix incorrect copying of non-expanded % strings
- proc: avoid calling close(-1) to not trip up valgrind
- shconfig: fix incorrect parsing of "\'"
- shconfig: fix incorrect processing of "\"\\\0BCD"
- shconfig: be more strict with syntax
Enhancements:
- deque: add HXdeque_genocide2
- format2: new format string (make-style) support
- mc: add HXmc_zvecfree